# film-repository

./: .gitignore  README.md  api.py  pyproject.toml
src/api/classes/: __init__.py  query_payload.py
src/api/routes/: router.py
src/sparql/: __init__.py  sparql.py
src/utils/: utils.py
